Added InsectDomain Class, defined new exception