@@ -1,9 +1,11 @@
 package zoogame.domains;
 
 import zoogame.animals.Animal;
+import zoogame.animals.Insect;
 import zoogame.animals.Reptile;
 import zoogame.animals.SizeClass;
 import zoogame.exceptions.InvalidAnimalAddedException;
+import zoogame.exceptions.InvalidSizeClassAddedException;
 
 import java.util.ArrayList;
 
@@ -15,7 +17,7 @@ public class Domain {
 
     public Domain() {
         nameOfDomain = "Empty domain";
-        animals = new ArrayList<Animal>();
+        animals = new ArrayList<>();
     }
 
     public Domain(double price, SizeClass sizeClass){
@@ -34,20 +36,32 @@ public class Domain {
         return animals.size();
     }
 
-    public void addAnimal(Animal animal) throws InvalidAnimalAddedException {
+    //TODO: handle new exceptions in other classes
+    //possible idea: just give it one step more
+
+    public void addAnimal(Animal animal) throws InvalidSizeClassAddedException {
         if (animals.isEmpty()) {
             nameOfDomain = animal.getName() + " domain";
         }
-        if (animal instanceof Reptile) {
-            throw new InvalidAnimalAddedException("[EXCEPTION!]Reptile cannot be added to common domain.\n");
+        if (animal.getSizeClass() != sizeClass) {
+            throw new InvalidSizeClassAddedException("[EXCEPTION!] Size class of domain is not identical with size class of" +
+                    "an animal. Size class of an animal: " + animal.getSizeClass() + "\n");
         }
-        if (animals.get(0).getMaxAmountInDomain() > animals.size())
+        if (animals.getFirst().getMaxAmountInDomain() > animals.size())
         {
             animals.add(animal);
         }
         else {
             System.out.println("Domain cannot contain more animals\n");
         }
+    }
+
+    public void addAnimal(Animal animal, boolean check) throws InvalidAnimalAddedException{
+        if (animal instanceof Reptile || animal instanceof Insect) {
+            throw new InvalidAnimalAddedException("[EXCEPTION!] Invalid type of animal added to common domain: " +
+                    animal.getClass() + "\n");
+        }
+        addAnimal(animal);
     }
 
     public void takeAnimal(Animal animal) {
@@ -58,7 +72,7 @@ public class Domain {
         return nameOfDomain;
     }
 
-    public void setSizetClass(SizeClass sizeClass){ this.sizeClass = sizeClass; }
+    public void setSizeClass(SizeClass sizeClass){ this.sizeClass = sizeClass; }
     public SizeClass getSizeClass() { return sizeClass; }
 
     public double getPrice() { return price; }
